@@ -1240,11 +1240,8 @@
     <value></value>
     <description>
       SaslPropertiesResolver used to resolve the QOP used for a connection to the
-      DataNode when reading or writing block data.  If not specified, the full set
-      of values specified in dfs.data.transfer.protection is used while
-      determining the QOP used for the connection. If a class is specified, then
-      the QOP values returned by the class will be used while determining the QOP
-      used for the connection.
+      DataNode when reading or writing block data. If not specified, the value of
+      hadoop.security.saslproperties.resolver.class is used as the default value.
     </description>
   </property>
 
